--- a/css/blog.css
+++ b/css/blog.css
@@ -13,6 +13,15 @@ style {
 }
 
 
+body{
+    overflow: scroll;
+}
+
+body {
+    overflow-y: scroll; /* Show vertical scrollbar */
+    overflow-x: scroll; /* Show horizontal scrollbar */
+  }
+
 @font-face {
     font-family: 'kupole';
     src: url('../media/fonts/KUPOLE-Regular.ttf') format('ttf');
