--- a/css/blog.css
+++ b/css/blog.css
@@ -221,7 +221,7 @@ p{
 }
 
 .header {
-    padding: 20px;
+    padding: 20px
     margin: 10px;
     justify-content: center;
     align-items: center;
